[package]
name = "phone-finder"
version = "1.0.0"
edition = "2021"
description = "Find mobile phone numbers from LinkedIn profiles or a name and company. Powered by Enrow."
license = "MIT"
keywords = ["phone-finder", "phone", "linkedin", "b2b", "enrow"]
repository = "https://github.com/enrow/phone-finder-rust"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
